5 Services and Networking/2 Demonstrate Basic Understanding of NetworkPolicies/febe.netpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: febe
  namespace: ps
spec:
  podSelector:
    matchLabels:
      app: be
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          namespace: ps
      podSelector:
        matchLabels:
          app: fe
    ports:
    - protocol: TCP
      port: 5432
